#### Don't forget to change the version number in configure.ac! ####

01 Oct 2003 Fix segmentation fault using NPTL threads and no console
            device is specified - Greg Smith
29 Sep 2003 Backout STUPID (dangerous) 16 Aug 2003 het changes now that
            configure.ac detects the bug that was causing it - Fish
            (I can't believe I did that; I must have been tired)
27 Sep 2003 Correct Makefile.am Transient variable names to not end
            with automake primaries - Ivan Warren
25 Sep 2003 PowerOff diagnose for 4361 & 937X processors - Tomas Masek by Fish
25 Sep 2003 Fix DASDCOPY bug copying too much to uncompressed FBA o/p - Fish
25 Sep 2003 Fix dasdtab entry for 3310 FBA device type - Fish
25 Sep 2003 Initial power-on reset for mainstor & expanded storage - Fish
25 Sep 2003 Resolve & verify HTTPROOT in config.c before startup - Fish
25 Sep 2003 Fix bug in fbadasd_init_handler causing DASDCOPY crash - Fish
21 Sep 2003 Complete overhaul to the build process  (merge of libtool_exp)
            version set to 2.17.c0
            - A Lot of People (commit by Ivan Warren)
21 Sep 2003 Added test for cygwin gcc alloca bug to configure.ac to fix
            issue of http server (and possibly other things) crashing - Fish
20 Sep 2003 Add disassemble command (u [r|v|p|h] addr range) - Jan Jaeger
16 Sep 2003 Tape read backward fixes contributed by Jay Jaeger - Fish
16 Sep 2003 Repair DEVPRIO handling - Mark L. Gaubatz
28 Aug 2003 Check mmap return value when allocating main storg - Ivan Warren
24 Aug 2003 fix for Asynch I/O Status stacking race condition - Ivan Warren
24 Aug 2003 Add modpath configuration statement - Jan Jaeger
22 Aug 2003 Remove setpriority from execute_ccw_chain and instead
            move it directly into the device thread itself - Fish
22 Aug 2003 Add support for strlcpy/strlcat and use in httpserv.c
            (please use where possible instead of strncpy/strncat) - Fish