@@ -1,5 +1,7 @@
 #### Don't forget to change the version number in configure.ac! ####
 
+02 Oct 2003 Issue warning message when restoring non-IEBCOPY xmit file
+            using dasdload - Greg Smith
 01 Oct 2003 Fix segmentation fault using NPTL threads and no console
             device is specified - Greg Smith
 29 Sep 2003 Backout STUPID (dangerous) 16 Aug 2003 het changes now that
